refactor: 改进代码质量与类型安全，修复潜在问题
- 移除无效的 TODO 注释，清理配置
- 为测试中的未实现方法添加明确的异常抛出
- 改进泛型类型安全，统一 EntityCrudService 接口的返回类型
- 修复 SpringContextUtil 的静态上下文设置方法
- 优化密码验证逻辑，防止用户枚举攻击
- 修正 RSA 工具类中字符串替换逻辑
- 增强 OpenAPI 控制器中的字段类型映射
- 重构前端表单验证规则生成逻辑，提高可维护性
- 修复审计日志服务的自引用注入问题
- 优化元数据扫描器的实体注册逻辑
- 改进异常处理测试，使用更明确的断言
- 统一登录页面路径常量，避免硬编码
- 修复 FlowManager 中的类型转换警告